--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -26,14 +26,23 @@
 }
 
 .empresa {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    max-width: 500px;
     padding: 20px;
-    gap: 10px 20px;
     background: #F2F2F2;
     margin-bottom: 20px;
     border-radius: 4px;
     position: relative;
+}
+
+.titulo {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    align-items: center;
+}
+
+.titulo h3 {
+    max-width: 20ch;
 }
 
 .empresa::before {
@@ -66,22 +75,7 @@
 .empresa-texto {
     font-size: 0.875rem;
     color: #525252;
-    line-height: 1.4;
-}
-
-.empresa-habilidades {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-    align-content: start;
-}
-
-.empresa-habilidades li{
-    font-size: 0.875rem;
-    line-height: 1.4;
-    border-radius: 4px;
-    background: #ffffff;
-    padding: 5px 10px;
+    line-height: 1.5;
 }
 
 @media (max-width: 800px) {
