--- a/css/experiencia.css
+++ b/css/experiencia.css
@@ -98,6 +98,19 @@
         width: initial;
         text-align: left;
     }
+    .titulo {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+    align-items: center;
+    }
+
+    .titulo h3 {
+        max-width: 10ch;
+    }
+    .titulo span {
+        max-width: 15ch;
+    }
 }
 
 @media (max-width: 400px) {
