--- a/css/footer.css
+++ b/css/footer.css
@@ -4,36 +4,72 @@
 
 .footer-container {
     max-width: 1200px;
-    padding: 120px 20px 60px 20px;
+    padding: 120px 20px 120px 20px;
     margin: 0 auto;
+}
+
+.info {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 100px;
-    align-items: center;
+    gap: 40px;
+    
+    .footer-contato {
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+        flex-direction: column;
+    }
+        .footer-contato li {
+            font-weight: bold;
+            font-size: 1.25rem;
+            line-height: 1.1;
+        }
+        .footer-contato a {
+            color: #fff;
+        }
+        .icones{
+            display: flex;
+        }
+        .icones li {
+            margin-left: 20px;
+            margin-bottom: 10px;
+        }
+        .footer-texto {
+            font-size: 1.5rem;
+            line-height: 1.33;
+            color: #A6A6A6;
+            max-width: 35ch;
+        }
 }
 
-.footer-texto {
-    font-size: 1.5rem;
-    line-height: 1.33;
-    color: #ccc;
-}
-
-.footer-contato li {
-    font-weight: bold;
-    font-size: 2.25rem;
-    line-height: 1.1;
-    color: #fff;
-    margin-bottom: 30px;
-}
-
-.footer-contato li a{
-    color: #fff;
+.divisor {
+    margin: 0 auto;
+    margin-top: 10px;
+    width: 1200px;
 }
 
 .footer-copy {
+    text-align: start;
+    margin-top: 20px;
     grid-column: -1 / 1;
-    font-size: 1.125rem;
-    color: #8f8f8f;
+    font-size: 14px;
+    line-height: 20px;
+    color: #A6A6A6;
+}
+
+#back-to-top {
+    position: fixed;
+    bottom: 20px; 
+    right: 20px; 
+    background: linear-gradient( #9751D3, #7532AF );
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px; 
+    font-size: 24px;
+    line-height: 1;
+    z-index: 1000;
+    display: none;
+    transition: opacity 0.3s;
 }
 
 @media (max-width: 800px) {
